--- a/index.html
+++ b/index.html
@@ -1,135 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="shortcut icon" href="/assets/image/favicon.png" type=image/x-icon>
-    <title>AE:HOME</title>
-</head>
-<body>
-    <header>
-        <nav class="navContainer">
-            <!-- navbar: logo and links -->
-            <col-12 class="navLinksContainerColumn">  
-                <a href="./index.html" class="anchorLogoContainer"><img src="/assets/image/Logo Amazing Events.png" alt="logo amazing events" class="logoNavbar"></a>
-                <a href="" class="spacer"></a>
-                <a href="/index.html" class="anchorHome; navLink" >HOME</a>
-                <a href="/pages/eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
-                <a href="/pages/eventsPast.html" class="anchorPastEvents; navLink" >PAST EVENTS</a>
-                <a href="/pages/contact.html" class="anchorContact; navLink" >CONTACT</a>
-                <a href="/pages/stats.html" class="anchorStats; navLink" >STATS</a>
-            </col-12>
-
-            <!-- navbar: titles and controls -->
-            <col-12 class="navTitlesAndControlsContainerColumn">
-                <div class="navDivBarbutton">
-                    <a href="/pages/stats.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
-                </div>
-                <div><h1>HOME</h1></div>
-                <div class="navDivBarbutton">
-                    <a href="/pages/eventsUpcoming.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
-                </div>
-            </col-12>
-        </nav>
-    </header>
-    <main>
-        <section class="formFilter">           
-            <div>
-                <form action="" method="" class="formFilterContent">
-                    <input type="checkbox" id="category" name="category" value="category1">
-                    <label for="category">Category</label><br>
-                    <input type="checkbox" id="category" name="category" value="category1">
-                    <label for="category">Category</label><br>
-                    <input type="checkbox" id="category" name="category" value="category1">
-                    <label for="category">Category</label><br>
-                    <input type="checkbox" id="category" name="category" value="category1">
-                    <label for="category">Category</label><br>
-                    <input type="checkbox" id="category" name="category" value="category1">
-                    <label for="category">Category</label><br>
-            </div>
-            <div class="formSpacer">
-                <a href="" class="formSpacer"></a>
-            </div>
-            <div  class="searchBox">
-                <label for="searchBox"></label>
-                <input type="text" name="searchBox" id="searchBox" placeholder="search" class="searchBox">
-            </div>
-
-            </form>
-        </section>
-        <section class="cardsRow">
-            <div class="card">
-                <img src="/assets/image/Cinema.jpg" alt="cinema">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="/assets/image/Costume_Party.jpg" alt="costume party">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="/assets/image/Food_Fair.jpg" alt="food fair">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="/assets/image/Marathon.jpg" alt="marathon">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="/assets/image/Museum_Tour.jpg" alt="museum">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="/assets/image/Music_Concert.jpg" alt="concert">
-                <h1>Titulo</h1>
-                <h4>Descripcion</h4>
-                <div class="cardPrize">
-                    <div><h6>prize: 0000</h6></div>
-                    <div><button class="addToCart">add to cart</button></div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer>   
-            <div class="socialLinks">
-                <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
-                <a href="" class="footerLogo"><img src="/assets/image/logos/logoFACEBOOK.png" alt="logo facebook" class="footerLogo"></a>
-                <a href="" class="footerLogo"><img src="/assets/image/logos/logoWAP.png" alt="logo whatsapp" class="footerLogo"></a>
-            </div>
-            <div>
-            <a href="" class="spacer"></a>
-            </div>
-            <div class="cohortName">
-                <h2>MH.TN06</h2>
-            </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style2.css"> -->
+        <!-- <link rel="stylesheet" href="style3.css"> -->
+        <title>MDHL: Home </title>
+    </head>
+    <body>
+        <header>
+                    <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" class="logo1">
+                    <img src="./assets/design1_image1.jpg" alt="two players facing eachother" class="image1">
+                    <h1 class="h1Title">Mighty Ducks Hockey League</h1>          
+                    <nav class="navbar">
+                        <a href="./index.html"><button class="button">Home</button></a>
+                        <a href="./about.html"><button class="button">About MDHL</button></a>
+                        <a href="./contact.html"><button class="button">Contact</button></a>
+                        <a href="./game_info.html"><button class="button">Game Info</button></a>
+                        <a href="./rules.html"><button class="button">Rules</button></a>
+                    </nav>
+        </header>
+        <main>
+            <section>
+                <h2 class="upcomingTitle">Upcoming Events</h2>
+                    <dl class="eventList">
+                        <dt><b>August 4</b></dt>
+                        <dd> MDSL Fundraiser</dd>
+                        <dt><b>August 16</b></dt>
+                        <dd>Season Kick-off: Meet the Teams</dd>
+                        <dt><b>September 1</b></dt>
+                        <dd>First Game of the Season (Check Game Schedule for details)</dd>
+                    </dl>
+            </section>
+        </main>
+    </body>
 </html>
